--- a/_posts/uml/2012-10-01-uml.md
+++ b/_posts/uml/2012-10-01-uml.md
@@ -2,8 +2,8 @@
 layout: post
 title: "UML系列01之  UML和绘图工具Visio介绍"
 description: "uml"
-category: uml
-tags: [uml]
+category: pattern
+tags: [uml, pattern]
 date: 2012-10-01 09:01
 ---
 
