--- a/_posts/uml/2012-10-02-uml.md
+++ b/_posts/uml/2012-10-02-uml.md
@@ -2,7 +2,7 @@
 layout: post
 title: "UML系列02之  UML类图(一)"
 description: "uml"
-category: uml
+category: pattern
 tags: [uml]
 date: 2012-10-02 09:01
 ---
