--- a/_posts/uml/2012-10-03-uml.md
+++ b/_posts/uml/2012-10-03-uml.md
@@ -2,7 +2,7 @@
 layout: post
 title: "UML系列03之  UML类图(二)"
 description: "uml"
-category: uml
+category: pattern
 tags: [uml]
 date: 2012-10-03 09:01
 ---
