--- a/_posts/uml/2012-10-04-uml.md
+++ b/_posts/uml/2012-10-04-uml.md
@@ -2,7 +2,7 @@
 layout: post
 title: "UML系列04之  UML时序图"
 description: "uml"
-category: uml
+category: pattern
 tags: [uml]
 date: 2012-10-04 09:01
 ---
