--- a/_posts/uml/2012-10-05-uml.md
+++ b/_posts/uml/2012-10-05-uml.md
@@ -2,7 +2,7 @@
 layout: post
 title: "UML系列05之 基本流程图"
 description: "uml"
-category: uml
+category: pattern
 tags: [uml]
 date: 2012-10-05 09:01
 ---
